add timer to makefile, remove out_str

--- a/RabbitQC.html
+++ b/RabbitQC.html
@@ -1,4 +1,4 @@
-<html><head><meta http-equiv="content-type" content="text/html;charset=utf-8" /><title>RabbitQC report at 2021-01-14      23:14:32 </title><script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
+<html><head><meta http-equiv="content-type" content="text/html;charset=utf-8" /><title>RabbitQC report at 2021-01-15      23:21:08 </title><script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
 
 <script type="text/javascript">
     function showOrHide(divname) {
@@ -2363,4 +2363,4 @@ Plotly.newPlot('plot_After_filtering__read1__base_contents', data, layout);
 </div>
 
 </div>
-<div id='footer'> <p>./rabbit_qc -w 1 -i ../data/test.fq -o p.fq --umi --umi_loc index1 </p>RabbitQC 0.0.1, at 2021-01-14      23:14:32 </div></body></html>
+<div id='footer'> <p>./rabbit_qc -w 1 -i ../data/test.fq -o p.fq </p>RabbitQC 0.0.1, at 2021-01-15      23:21:08 </div></body></html>
